[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# compiler_builtins = "0.1.89"
linked_list_allocator = {version = "0.10.5", features = ["use_spin", "alloc_ref"] }

[profile.dev]
panic = "abort"
